--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,8 @@
     <groupId>org.harctoolbox</groupId>
     <artifactId>Jirc</artifactId>
     <packaging>jar</packaging>
-    <version>1.4.1</version>
+    <version>1.5dev</version>
     <name>Jirc</name>
-    <parent>
-        <groupId>org.harctoolbox</groupId>
-        <artifactId>HarctoolboxBundle</artifactId>
-        <version>1.4.1</version>
-        <relativePath>..</relativePath>
-    </parent>
     <licenses>
         <license>
             <name>GPL 2+</name>
@@ -30,13 +24,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <distributionManagement>
-        <repository>
-            <id>repos</id>
-            <name>Repository</name>
-            <url>file:///${project.basedir}/../repos</url>
-        </repository>
-    </distributionManagement>
     <build>
         <plugins>
             <!-- Generate Version.java from Version.xml using mkVersion.xsl. -->
@@ -60,7 +47,7 @@
                             <includes>
                                 <include>Version.xml</include>
                             </includes>
-                            <stylesheet>../tools/mkVersion.xsl</stylesheet>
+                            <stylesheet>tools/mkVersion.xsl</stylesheet>
                             <parameters>
                                 <parameter>
                                     <name>version</name>
@@ -89,7 +76,7 @@
                             <includes>
                                 <include>Jirc.xml</include>
                             </includes>
-                            <stylesheet>../tools/xdoc2html.xsl</stylesheet>
+                            <stylesheet>tools/xdoc2html.xsl</stylesheet>
                             <fileMappers>
                                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
                                     <targetExtension>.html</targetExtension>
@@ -175,14 +162,17 @@
         <dependency>
             <groupId>com.beust</groupId>
             <artifactId>jcommander</artifactId>
+            <version>1.35</version>
         </dependency>
         <dependency>
             <groupId>org.harctoolbox</groupId>
             <artifactId>Girr</artifactId>
+            <version>1.5dev</version>
         </dependency>
         <dependency>
             <groupId>org.harctoolbox</groupId>
             <artifactId>IrpMaster</artifactId>
+            <version>1.5dev</version>
         </dependency>
     </dependencies>
 </project>
