--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.harctoolbox</groupId>
     <artifactId>Jirc</artifactId>
     <packaging>jar</packaging>
-    <version>1.5dev</version>
+    <version>1.4.2</version>
     <name>Jirc</name>
     <licenses>
         <license>
@@ -167,7 +167,7 @@
         <dependency>
             <groupId>org.harctoolbox</groupId>
             <artifactId>Girr</artifactId>
-            <version>1.5dev</version>
+            <version>1.4.2</version>
         </dependency>
     </dependencies>
 </project>
