--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,8 @@
             <url>https://www.gnu.org/licenses/gpl2.html</url>
         </license>
     </licenses>
-    <description>A Java translation of substantial parts of Lirc 0.9.0.
-        Consists of a library and the executable program Lirc2XML which converts
-        one or more Lirc config files to Girr XML format.</description>
-        <url>http://www.harctoolbox.org</url>
+    <description>A Java translation of substantial parts of Lirc 0.9.0.</description>
+    <url>http://www.harctoolbox.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -68,25 +66,7 @@
                                 </fileMapper>
                             </fileMappers>
                         </transformationSet>
-                        <transformationSet>
-                            <dir>src/main/xdocs</dir>
-                            <outputDir>
-                                ${project.build.directory}/generated-documents
-                            </outputDir>
-                            <includes>
-                                <include>Jirc.xml</include>
-                            </includes>
-                            <stylesheet>tools/xdoc2html.xsl</stylesheet>
-                            <fileMappers>
-                                <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
-                                    <targetExtension>.html</targetExtension>
-                                </fileMapper>
-                            </fileMappers>
-                        </transformationSet>
                     </transformationSets>
-                    <catalogs>
-                        <catalog>../schemas/catalog.xml</catalog>
-                    </catalogs>
                 </configuration>
 
                 <!-- Use xalan instead of builtin parser which doesn't really work -->
@@ -105,11 +85,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>org.harctoolbox.jirc.Lirc2Xml</mainClass>
-                        </manifest>
-                    </archive>
+                    <archive/>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
@@ -154,6 +130,16 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/apidocs</outputDirectory>
+                    <show>package</show> <!-- Document also package private classes -->
+                    <aggregate>true</aggregate>
+                </configuration>
             </plugin>
         </plugins>
     </build>
