--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.harctoolbox</groupId>
     <artifactId>Jirc</artifactId>
     <packaging>jar</packaging>
-    <version>2.2.3</version>
+    <version>2.2.4-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <licenses>
         <license>
@@ -36,14 +36,14 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com:bengtmartensson/IrpTransmogrifier.git</connection>
-        <developerConnection>scm:git:ssh://github.com:bengtmartensson/IrpTransmogrifier.git</developerConnection>
-        <url>https://github.com/bengtmartensson/IrpTransmogrifier/tree/master</url>
+        <connection>scm:git:git://github.com:bengtmartensson/${project.artifactId}.git</connection>
+        <developerConnection>scm:git:ssh://github.com:bengtmartensson/${project.artifactId}.git</developerConnection>
+        <url>https://github.com/bengtmartensson/${project.artifactId}/tree/master</url>
     </scm>
 
     <issueManagement>
         <system>GitHub Issues</system>
-        <url>https://github.com/bengtmartensson/harctoolboxbundle/issues</url>
+        <url>https://github.com/bengtmartensson/${project.artifactId}/issues</url>
     </issueManagement>
 
     <distributionManagement>
