--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@
         <dependency>
             <groupId>org.harctoolbox</groupId>
             <artifactId>Girr</artifactId>
-            <version>2.2.3</version>
+            <version>2.2.4-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
