--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.harctoolbox</groupId>
     <artifactId>Jirc</artifactId>
     <packaging>jar</packaging>
-    <version>2.2.4-SNAPSHOT</version>
+    <version>2.2.4</version>
     <name>${project.artifactId}</name>
     <licenses>
         <license>
@@ -252,7 +252,7 @@
         <dependency>
             <groupId>org.harctoolbox</groupId>
             <artifactId>Girr</artifactId>
-            <version>2.2.4-SNAPSHOT</version>
+            <version>2.2.4</version>
         </dependency>
     </dependencies>
 </project>
