--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.harctoolbox</groupId>
     <artifactId>Jirc</artifactId>
     <packaging>jar</packaging>
-    <version>2.2.5-SNAPSHOT</version>
+    <version>2.2.5</version>
     <name>${project.artifactId}</name>
     <licenses>
         <license>
