--- a/pom.xml
+++ b/pom.xml
@@ -280,7 +280,7 @@
         <dependency>
             <groupId>org.harctoolbox</groupId>
             <artifactId>Girr</artifactId>
-            <version>2.2.7</version>
+            <version>2.2.8-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
