--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.harctoolbox</groupId>
     <artifactId>Jirc</artifactId>
     <packaging>jar</packaging>
-    <version>2.2.10-SNAPSHOT</version>
+    <version>2.2.10</version>
     <name>${project.artifactId}</name>
     <licenses>
         <license>
@@ -303,8 +303,8 @@
     <dependencies>
         <dependency>
             <groupId>org.harctoolbox</groupId>
-            <artifactId>Girr</artifactId>
-            <version>2.2.10-SNAPSHOT</version>
+            <artifactId>Girr</artifactId> <!-- Invokes IrpTransmgrifier transitively -->
+            <version>2.2.10</version>
         </dependency>
     </dependencies>
 </project>
