--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.harctoolbox</groupId>
     <artifactId>Jirc</artifactId>
     <packaging>jar</packaging>
-    <version>2.2.14-SNAPSHOT</version>
+    <version>2.2.14</version>
     <name>${project.artifactId}</name>
     <licenses>
         <license>
@@ -304,7 +304,7 @@
         <dependency>
             <groupId>org.harctoolbox</groupId>
             <artifactId>Girr</artifactId> <!-- Invokes IrpTransmgrifier transitively -->
-            <version>2.2.14-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
