--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         </license>
     </licenses>
     <description>A Java translation of substantial parts of Lirc 0.9.0.</description>
-    <url>http://www.harctoolbox.org</url>
+    <url>https://harctoolbox.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
